force-app/main/default/objects/CacheConfiguration__mdt/CacheConfiguration__mdt.object-meta.xml
<CustomObject>
    <label>Cache Configuration</label>
    <pluralLabel>Cache Configurations</pluralLabel>
</CustomObject>