force-app/main/default/objects/CacheConfiguration__mdt/fields/FallbackInTransactionCache__c.field-meta.xml
<CustomField>
    <fullName>FallbackInTransactionCache__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Fallback In Transaction Cache</label>
    <type>Checkbox</type>
</CustomField>