force-app/main/default/objects/CacheConfiguration__mdt/fields/IsCacheImmutable__c.field-meta.xml
<CustomField>
    <fullName>IsCacheImmutable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Cache Immutable</label>
    <type>Checkbox</type>
</CustomField>