force-app/main/default/objects/CacheConfiguration__mdt/fields/OrgCacheTimeToLive__c.field-meta.xml
<CustomField>
    <fullName>OrgCacheTimeToLive__c</fullName>
    <defaultValue>86400</defaultValue>
    <label>Org Cache Time To Live</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>