force-app/main/default/objects/CacheConfiguration__mdt/fields/PartitionName__c.field-meta.xml
<CustomField>
    <fullName>PartitionName__c</fullName>
    <label>Partition Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>