force-app/main/default/objects/CacheConfiguration__mdt/fields/SessionCacheTimeToLive__c.field-meta.xml
<CustomField>
    <fullName>SessionCacheTimeToLive__c</fullName>
    <defaultValue>28800</defaultValue>
    <label>Session Cache Time To Live</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>