force-app/main/default/objects/CacheConfiguration__mdt/fields/TimeToLive__c.field-meta.xml
<CustomField>
    <fullName>TimeToLive__c</fullName>
    <description>Time to live in seconds</description>
    <label>Time To Live</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>