force-app/main/default/objects/CacheConfiguration__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Session</fullName>
                <default>true</default>
                <label>Session</label>
            </value>
            <value>
                <fullName>Org</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>