force-app/main/default/objects/CacheConfiguration__mdt/fields/Visibility__c.field-meta.xml
<CustomField>
    <fullName>Visibility__c</fullName>
    <defaultValue>&quot;ALL&quot;</defaultValue>
    <label>Visibility</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>