force-app/main/default/objects/CacheConfiguration__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>OrgCacheTimeToLive__c</columns>
    <columns>SessionCacheTimeToLive__c</columns>
    <columns>Enabled__c</columns>
    <columns>FallbackInTransactionCache__c</columns>
    <columns>Visibility__c</columns>
    <columns>IsCacheImmutable__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>